# csbschema

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  requirements-test.txt
.github/workflows/: flake8-and-unit-tests.yml  python-app.yml
csbschema/: __init__.py  validators.py
csbschema/cmd/: __init__.py  validate.py
csbschema/command/: __main__.py  validate.py
csbschema/data/: CSB-schema-3_0_0-2022-12.json  CSB-schema-3_0_0-2023-02.json  CSB-schema-3_0_0-2023-03.json  CSB-schema-3_0_0-2023-08.json  CSB-schema-3_0_0bis-2022-12.json  CSB-schema-3_0_0bis-2023-02.json  CSB-schema-3_1_0-2023-03.json  CSB-schema-3_1_0-2023-08.json  CSB-schema-3_1_0-2024-04.json  CSB-schema-3_2_0-BETA.json  XYZ-CSB-schema-3_0_0-2023-03.json  XYZ-CSB-schema-3_0_0-2023-08.json  XYZ-CSB-schema-3_1_0-2023-08.json  XYZ-CSB-schema-3_1_0-2024-04.json
docs/IHO/: IHO_B12v3_JSON.pptx  b12_v3_1_0_example-2023-03.json  b12_v3_1_0_example-2023-08.json  b12_v3_1_0_example-invalid-emptyprocessing.json  b12_v3_1_0_example-invalid.json  b12_v3_1_0_example-noprocessing.json  b12_v3_1_0_example-pltfrm-subset-id-numbermissing.json  b12_v3_1_0_example-pltfrm-subset-id-typemissing.json  b12_v3_1_0_example-pltfrm-subset-id.json  b12_v3_1_0_example-pltfrm-subset.json  b12_v3_1_0_example-required.json  b12_v3_1_0_example.json  b12_v3_1_0_xyz_example-invalid.json  b12_v3_1_0_xyz_example-noprocessing.json  b12_v3_1_0_xyz_example-pltfrm-subset-id-numbermissing.json  b12_v3_1_0_xyz_example-pltfrm-subset-id-typemissing.json  b12_v3_1_0_xyz_example-pltfrm-subset-id.json  b12_v3_1_0_xyz_example-pltfrm-subset.json  b12_v3_1_0_xyz_example-required.json  b12_v3_1_0_xyz_example.json  b12_v3_2_0-BETA_example.json  b12_v3_example-invalid-emptyprocessing.json  b12_v3_example-invalid.json  b12_v3_example-noprocessing.json  b12_v3_example.json  b12_v3bis_example.json  b12_v3bis_example_2022-12.json
docs/NOAA/: example_csb_geojson_file.geojson  noaa_b12_v3_0_0_required.json  noaa_b12_v3_0_0_suggested-2023-03.json  noaa_b12_v3_0_0_suggested.json  noaa_b12_v3_0_0_xyz_required.json  noaa_b12_v3_0_0_xyz_suggested-2023-03.json  noaa_b12_v3_0_0_xyz_suggested.json
tests/integration/: validate_cmd.sh
tests/unit/: test_regexes.py  test_validators.py  test_validators_current.py  test_validators_previous.py
